@@ -9,7 +9,6 @@ To Do:
 - save last chart viewed between sessions.
 - median lines chart objects
 - fibo time chart objects
-- display chart object info when cursor hovers over them in the data panel or make tooltip.
 - update classes with a description of purpose, usage etc.
 - Round off values to lesser precision when displaying in data panel.
 - Improve source code documentation. Javadoc comments are utilised by Doxygen.
